# Sisyphus-case-platform

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  init.sh  process.json  progress.json  test.csv
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5ca993a257e5_initial_schema.py  a1b2c3d4e5f6_add_testcases_tables.py  aa1b2c3d4e5f_create_import_jobs_and_records_tables.py  c3d4e5f6g7h8_add_uda_and_ai_config_tables.py  ec4b13b4028c_merge_all_heads.py  f9a0b1c2d3e4_add_is_system_to_folders.py  g0h1i2j3k4l5_make_testcase_requirement_nullable.py
backend/app/: __init__.py  config.py  database.py  init_db.py  main.py
backend/app/agents/: __init__.py  base.py  generator.py  orchestrator.py  reviewer.py
backend/app/ai/: llm_client.py  parser.py  prompts.py  sse_collector.py  stream_adapter.py
backend/app/api/: case_packages.py  cases.py  config.py  documents.py  export.py  files.py  generation.py  integrations.py  knowledge.py  projects.py  requirements.py  reviews.py  structured_requirements.py  tasks.py  test_points.py  testcases.py  vectors.py
backend/app/common/: audit.py  auth.py
backend/app/core/: config.py  database.py  dependencies.py  encryption.py  exceptions.py  middleware.py  security.py
backend/app/llm/: __init__.py  alibaba.py  base.py  factory.py  glm.py  minimax.py
backend/app/migrations/: 002_redesign_schema.py  README.md  add_embedding_column.py
backend/app/models/: __init__.py  conversation.py  export_template.py  file.py  integration_sync_record.py  job.py  knowledge_asset.py  llm_config.py  project.py  requirement.py  requirement_task.py  review_record.py  source_document.py  structured_requirement_version.py  test_case.py  test_case_new.py  test_case_package_version.py  test_point_version.py  user_config.py
backend/app/plugins/: __init__.py  base.py  manager.py  md_parser.py  pdf_parser.py  txt_parser.py
backend/app/rag/: __init__.py  embeddings.py  (+2 more)
backend/scripts/: clean_historical_data.py  init_db.py  seed.py
backend/skills/: README.md
backend/tests/: conftest.py
(+701 files in other folders)
